<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="identityEditorFragment"
            type="com.example.client_leger.profile.view.IdentityEditorFragment" />

        <variable
            name="viewModel"
            type="com.example.client_leger.profile.viewmodel.UserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/profile_frame_editor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_image_editor"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="64dp"
                app:civ_circle_background_color="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_image_button"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/choose_picture"
                app:icon="@drawable/ic_add_photo_alternate_24px" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.36" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickname_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:hint="@string/label_nickname"
            app:layout_constraintBottom_toTopOf="@+id/name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_frame_editor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_optimizationLevel="chains">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nickname_field_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.user.data.nickname}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:hint="@string/label_first_name"
            app:layout_constraintBottom_toTopOf="@+id/surname_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_frame_editor"
            app:layout_constraintTop_toBottomOf="@+id/nickname_layout"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_optimizationLevel="chains">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.user.data.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surname_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:hint="@string/label_last_name"
            app:layout_constraintBottom_toTopOf="@+id/password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_frame_editor"
            app:layout_constraintTop_toBottomOf="@+id/name_layout"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_optimizationLevel="chains">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname_field_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.user.data.surname}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="256dp"
            android:hint="@string/label_password"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_frame_editor"
            app:layout_constraintTop_toBottomOf="@+id/surname_layout"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_optimizationLevel="chains">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/language_field_editor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:checkedButton="@+id/first"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            app:layout_optimizationLevel="chains">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/label_language" />

            <RadioButton
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/francais" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>